# studytrack

./: README.md  app_init.py  auth.py  main.py  models.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml
components/: chapter_manager.py  progress_tracker.py  subject_manager.py
instance/: lecture_tracker.db
utils/: data_manager.py  visualizations.py
