[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.63.1",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.0",
    "twilio>=9.4.5",
    "werkzeug>=3.1.3",
]
